--- a/css/css.css
+++ b/css/css.css
@@ -66,6 +66,12 @@ body
 {
 	border-bottom:#333 1px solid;
 }
+.mw{
+	z-index: 10;
+	position: absolute;
+	top: 12px;
+	left: 80px;
+}
 .mainmu
 {
 	position:relative;
